Update Diabetes prediction analysis on R studio uding stat and logistic regression.Rmd

--- a/Diabetes prediction analysis on R studio uding stat and logistic regression.Rmd
+++ b/Diabetes prediction analysis on R studio uding stat and logistic regression.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Project"
-author: "Deborupa Pal"
+author: "Sharmilashree vanniaperumal"
 date: "2023-12-09"
 output: html_document
 ---
